  make dist on it!  0.0910 is ``v0_0910''!  For example:

  cvs tag -Rc v0_11   .
  cvs tag -Rc v0_1005 .
]

,----- To Do -----
|
| Before 0.11
|
| Test $kernel->fork() or replace it entirely.
|
| After 0.11
|
| Split the samples out into a separate distribution.
| Revise the POE web pages.
|
`-----------------


0.1009 2000.??.??
-----------------

Optimized away a function in lib/TestSetup.pm.

Added t/13_wheels_udp.t and a corresponding MANIFEST entry.

Jonathan Feinber graciously provided a Windows NT shell for testing
and development, opening whole new worlds of pain to me.  :)

Tweaked the Win32 FIONBIO ioctls for non-blocking filehandles in
POE::Kernel and POE::Wheel::SocketFactory.

Added t/00_coverage.t to the MANIFEST.  Whoops!

Added a crucial newline between 1; and __END__ in POE::Session.

Jonathan Feinber reported that ActiveState 5.6.0, build 613 doesn't
implement F_GETFL and F_SETFL.  These constants aren't used for the
MSWin32 code, so now POE::Kernel and POE::Wheel::SocketFactory define
dummies for them.


0.1008 2000.06.14
-----------------

Tidied Session garbage collection tests.

Stopped setting $SIG{CH?LD} handlers when using Event.

The wheels tests were failing on DOSISH systems because the 1-byte
blocksize generated fake newlines.  CR and LF coming in separately and
being interpreted as two newlines.  Increased the BlockSize so this
won't happen.

Prevented the TKDESTROY signal from being fired if POE finishes before
Tk does.  There's nothing to receive the signal!

Enhanced the "# line" directives that POE::Preprocessor injects into
macros.  Now they're added when macros are used; this enables them to
include not only the macro name and line number but also the source
file and line number.  For example: "Use of uninitialized value in
concatenation (.) at macro ssid (line 1) invoked from POE/Kernel.pm
line 1007."  This doesn't nest, though.

Added a postback test to t/06_tk.t, discovering in the process that