@@ -168,11 +168,6 @@ sub import {
             # Otherwise append this line to the macro.
             else {
               $macro_line++;
-
-#              $macros{$macro_name}->[MAC_CODE] .=
-#                "# line $macro_line \"macro $macro_name\"\n"
-#                unless $^P;
-
               $macros{$macro_name}->[MAC_CODE] .= $_;
             }
 
@@ -280,18 +275,18 @@ sub import {
                 1 while ($substitution =~ s/$mac_param/$use_param/g);
               }
 
-              my @sub_lines;
               unless ($^P) {
-                @sub_lines = split "\n", $substitution;
+                my @sub_lines = split "\n", $substitution;
                 for (my $sub_line = 0; $sub_line < @sub_lines; $sub_line++) {
                   $sub_lines[$sub_line] =
                     ( "# line $line_number \"macro $name (line $sub_line) " .
                       "invoked from $file_name\"\n"
                     ) . $sub_lines[$sub_line];
                 }
+                $substitution = join "\n", @sub_lines;
               }
 
-              $_ = $left . join("\n", @sub_lines) . $right;
+              $_ = $left . $substitution . $right;
               $_ .= "# line " . ($line_number+1) . " \"$file_name\"\n"
                 unless $^P;
 
